More changes to comments. Changed another font and reformatted some of my grid layout. Added a few icons and links to social media.

--- a/EmergencyPrepper/Views/GoBagPage.xaml
+++ b/EmergencyPrepper/Views/GoBagPage.xaml
@@ -18,9 +18,9 @@
 
             <Label x:Name="EmergencyLabel"
                    Text="Preparing for: "
-                   FontFamily="Darkmode"
+                   FontFamily="Destruction"
                    TextColor="Black"
-                   FontSize="48"
+                   FontSize="40"
                    HorizontalOptions="Center"/>
 
             <!-- Checklist -->
