--- a/EmergencyPrepper/Views/SplashPage.xaml
+++ b/EmergencyPrepper/Views/SplashPage.xaml
@@ -1,7 +1,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="EmergencyPrepper.Views.SplashPage"
-             BackgroundColor="Black">
+             BackgroundColor="DarkSlateGrey">
 
     <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center">
 
